$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-34 (opened December 13, 2009) -- (codename: Lucia)

	* goodness.cca: was not using correct weights. Broken in r992 (Sep
	6, 2009). 

	* vegdist: added UI for the alternative Gower index ("altGower")
	that skips double zeros. The C code has been in vegan since Oct 24
	(r1051), but no R interface. Together with decostand(..., "log")
	of r1052 this closes Feature Request #473 submitted by Etienne
	Laliberte in R-Forge.

	* anova.cca: tied values could be randomly broken due to
	numerical precision, and this gave false P-values, for instance in
	anova(cca(dune ~ Management, dune.env),
	strata=dune.env$Management).  Now rounds statistics to 12 decimal
	places in permutest.cca and in anova.ccabyterm.

	* permutest.cca: uses pasteCall() in print.
	
Version 1.16-33 (closed December 13, 2009)

	* DESCRIPTION: Guillaume Blanchet added to the Authors. 

	* spandepth: New function to find the depths of nodes in a
	spanning tree from spantree() function. Per request of
	W. E. Sharp. 

	* bstick: refuses to analyse capscale() models with imaginary
	components because I have no idea how to do it. Reported by
	Richard Telford, Bergen (who probably wanted another
	solution...). 

	* predict.rda: works now with rank = 0 -- returns matrix of column
	means.  (Not yet done for predict.cca.)

	* simulate.rda: can now add permuted residuals to the fitted
	values. Experimental, low level interface that requires giving the
	index of right length. The permutation index can contain
	duplicates such as from sample(nrow(data), replace = TRUE) so that
	bootstrapping is possible unlike in anova.cca/permutest.cca. Works
	now with partial model: adds partial fit to the constrained fit.

	* simulate.cca: implemented by cloning simulate.rda. Function
	works with internal Chi-square standardized form and
	back-transforms the result by marginal totals and matrix grand